--- a/demo.ipynb
+++ b/demo.ipynb
@@ -131,61 +131,14 @@
         "id": "FHrtIuOFXzkA"
       },
       "source": [
-        "## 1-1. 모델 및 피쳐 선택"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GPDwmE1yZ_W4"
-      },
-      "source": [
-        "## 모델 선택\n",
-        "\n",
-        "---\n",
-        "\n",
-        "실험할 모델을 선택하세요"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 52,
-      "metadata": {
-        "id": "T_9n92iYYIeL"
-      },
-      "outputs": [],
-      "source": [
-        "# 사용 가능한 옵션: 'rf' (Random Forest), 'svm' (SVM), 'keras' (Keras DL)\n",
-        "CURRENT_MODEL_TYPE = 'keras'"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nRGOqsRsbxhn"
-      },
-      "source": [
-        "## 피쳐 선택\n",
-        "\n",
-        "---\n",
-        "\n",
-        "라이브러리 로드 및 헬퍼 함수 선언 후 실험할 피쳐 엔지니어링 셀을 실행하세요"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PXxntf21cTUR"
-      },
-      "source": [
-        "### 라이브러리 로드 및 헬퍼 함수"
+        "## 1. 라이브러리 로드 및 함수 선언(All_pose_classifier_keras.h5 필요)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MQfr6KTccNwW"
+        "id": "T_9n92iYYIeL"
       },
       "outputs": [],
       "source": [
@@ -201,6 +154,8 @@
         "from google.colab.output import eval_js\n",
         "from base64 import b64decode, b64encode\n",
         "import os\n",
+        "\n",
+        "CURRENT_MODEL_TYPE = 'keras'\n",
         "\n",
         "def calculate_angle(a, b, c):\n",
         "    reliability = a[3] * b[3] * c[3]\n",
@@ -225,228 +180,7 @@
         "        norm_len = np.linalg.norm(normal)\n",
         "        if norm_len == 0: return None, reliability\n",
         "        return normal / norm_len, reliability\n",
-        "    except: return None, reliability\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2jv_YviCa_Z_"
-      },
-      "source": [
-        "### Angle + Plane"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
-      "metadata": {
-        "id": "nXE1PVJXbw4s"
-      },
-      "outputs": [],
-      "source": [
-        "def feature_engineering(landmarks):\n",
-        "    \"\"\"\n",
-        "    landmarks: (33, 4) shape의 numpy array [x, y, z, visibility]\n",
-        "    \"\"\"\n",
-        "    if landmarks is None: return None\n",
-        "    NOSE = 0\n",
-        "    L_EYE, R_EYE = 2, 5\n",
-        "    L_EAR, R_EAR = 7, 8\n",
-        "    L_SHOULDER, R_SHOULDER = 11, 12\n",
-        "    L_ELBOW, R_ELBOW = 13, 14\n",
-        "    L_WRIST, R_WRIST = 15, 16\n",
-        "    L_HIP, R_HIP = 23, 24\n",
-        "\n",
-        "    angle_features, angle_rels = [], []\n",
-        "    normal_features, normal_rels = [], []\n",
-        "\n",
-        "    angles_to_calc = [\n",
-        "        (landmarks[L_SHOULDER], landmarks[L_ELBOW], landmarks[L_WRIST]),\n",
-        "        (landmarks[R_SHOULDER], landmarks[R_ELBOW], landmarks[R_WRIST]),\n",
-        "        (landmarks[L_ELBOW], landmarks[L_SHOULDER], landmarks[L_HIP]),\n",
-        "        (landmarks[R_ELBOW], landmarks[R_SHOULDER], landmarks[R_HIP]),\n",
-        "        (landmarks[L_EAR], landmarks[L_SHOULDER], landmarks[L_HIP]),\n",
-        "        (landmarks[R_EAR], landmarks[R_SHOULDER], landmarks[R_HIP])\n",
-        "    ]\n",
-        "    for p1, p2, p3 in angles_to_calc:\n",
-        "        ang, rel = calculate_angle(p1, p2, p3)\n",
-        "        angle_features.append(ang)\n",
-        "        angle_rels.append(rel)\n",
-        "\n",
-        "    face_normal, face_rel = calculate_plane_normal(landmarks[NOSE], landmarks[L_EYE], landmarks[R_EYE])\n",
-        "    normal_features.append(face_normal)\n",
-        "    normal_rels.append(face_rel)\n",
-        "\n",
-        "    sh_nose_normal, sh_nose_rel = calculate_plane_normal(landmarks[L_SHOULDER], landmarks[R_SHOULDER], landmarks[NOSE])\n",
-        "    normal_features.append(sh_nose_normal)\n",
-        "    normal_rels.append(sh_nose_rel)\n",
-        "\n",
-        "    norm_angles_vec = [(val / 360.0) if val is not None else 0.0 for val in angle_features]\n",
-        "    flat_normals_vec = []\n",
-        "    for vec in normal_features:\n",
-        "        if vec is not None: flat_normals_vec.extend(vec)\n",
-        "        else: flat_normals_vec.extend([0.0, 0.0, 0.0])\n",
-        "\n",
-        "    final_features = norm_angles_vec + flat_normals_vec + angle_rels + normal_rels\n",
-        "    return np.array(final_features)\n",
-        "\n",
-        "# 체크포인트 경로\n",
-        "MODEL_PATHS = {\n",
-        "    'rf': 'pose_classifier_rf.pkl',\n",
-        "    'svm': 'pose_classifier_svm.pkl',\n",
-        "    'keras': 'pose_classifier_keras.h5'\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fgzhg5nZb2zY"
-      },
-      "source": [
-        "### Only Plane"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TqIxhn2xb7DP"
-      },
-      "outputs": [],
-      "source": [
-        "def feature_engineering(landmarks):\n",
-        "    \"\"\"\n",
-        "    landmarks: (33, 4) shape의 numpy array [x, y, z, visibility]\n",
-        "    \"\"\"\n",
-        "    if landmarks is None: return None\n",
-        "    NOSE = 0\n",
-        "    L_EYE, R_EYE = 2, 5\n",
-        "    L_EAR, R_EAR = 7, 8\n",
-        "    L_SHOULDER, R_SHOULDER = 11, 12\n",
-        "    L_ELBOW, R_ELBOW = 13, 14\n",
-        "    L_WRIST, R_WRIST = 15, 16\n",
-        "    L_HIP, R_HIP = 23, 24\n",
-        "\n",
-        "    normal_features, normal_rels = [], []\n",
-        "\n",
-        "    face_normal, face_rel = calculate_plane_normal(landmarks[NOSE], landmarks[L_EYE], landmarks[R_EYE])\n",
-        "    normal_features.append(face_normal)\n",
-        "    normal_rels.append(face_rel)\n",
-        "\n",
-        "    sh_nose_normal, sh_nose_rel = calculate_plane_normal(landmarks[L_SHOULDER], landmarks[R_SHOULDER], landmarks[NOSE])\n",
-        "    normal_features.append(sh_nose_normal)\n",
-        "    normal_rels.append(sh_nose_rel)\n",
-        "\n",
-        "    flat_normals_vec = []\n",
-        "    for vec in normal_features:\n",
-        "        if vec is not None: flat_normals_vec.extend(vec)\n",
-        "        else: flat_normals_vec.extend([0.0, 0.0, 0.0])\n",
-        "\n",
-        "    final_features = flat_normals_vec + normal_rels\n",
-        "    return np.array(final_features)\n",
-        "\n",
-        "# 체크포인트 경로\n",
-        "MODEL_PATHS = {\n",
-        "    'rf': 'plane_pose_classifier_rf.pkl',\n",
-        "    'svm': 'plane_pose_classifier_svm.pkl',\n",
-        "    'keras': 'plane_pose_classifier_keras.h5'\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pPieh2ztgmug"
-      },
-      "source": [
-        "### Landmark(상대값)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {
-        "id": "UUJSas4sgti3"
-      },
-      "outputs": [],
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "def feature_engineering(landmarks):\n",
-        "    \"\"\"\n",
-        "    (33, 4) 랜드마크를 입력받아 다음 처리를 수행한 1차원 벡터를 반환합니다.\n",
-        "\n",
-        "    1. 중심 보정: 양쪽 어깨의 중점(Midpoint)을 (0,0,0)으로 이동\n",
-        "    2. 크기 정규화: 어깨 너비(Distance)를 1.0으로 맞추도록 모든 좌표 스케일링\n",
-        "       -> 카메라와의 거리에 상관없이 동일한 자세로 인식하게 함\n",
-        "\n",
-        "    Output: (132,) 형태의 1차원 벡터\n",
-        "    \"\"\"\n",
-        "    if landmarks is None:\n",
-        "        return None\n",
-        "\n",
-        "    # 1. 랜드마크 복사 (원본 훼손 방지)\n",
-        "    # shape: (33, 4) -> [x, y, z, visibility]\n",
-        "    lm_copy = landmarks.copy()\n",
-        "\n",
-        "    # 인덱스 정의\n",
-        "    L_SHOULDER = 11\n",
-        "    R_SHOULDER = 12\n",
-        "\n",
-        "    # 2. 기준점(Origin) 계산: 양쪽 어깨의 중점\n",
-        "    # visibility(3번 인덱스)는 계산에서 제외하고 x,y,z(0~2)만 씀\n",
-        "    left_sh = lm_copy[L_SHOULDER, :3]  # [x, y, z]\n",
-        "    right_sh = lm_copy[R_SHOULDER, :3] # [x, y, z]\n",
-        "\n",
-        "    center_point = (left_sh + right_sh) / 2.0\n",
-        "\n",
-        "    # 3. 위치 보정 (Translation): 모든 점을 어깨 중점이 원점이 되도록 이동\n",
-        "    lm_copy[:, :3] -= center_point\n",
-        "\n",
-        "    # 4. 크기 보정 (Scale Normalization)\n",
-        "    # 어깨 너비(유클리드 거리) 계산\n",
-        "    shoulder_width = np.linalg.norm(left_sh - right_sh)\n",
-        "\n",
-        "    # 만약 어깨 너비가 0이거나 감지 안되면(극단적 예외) 1로 두어 나눗셈 에러 방지\n",
-        "    if shoulder_width < 1e-6:\n",
-        "        scale_factor = 1.0\n",
-        "    else:\n",
-        "        scale_factor = shoulder_width\n",
-        "\n",
-        "    # 모든 좌표(x,y,z)를 어깨 너비로 나눔 -> 거리에 따른 크기 변화 제거\n",
-        "    lm_copy[:, :3] /= scale_factor\n",
-        "\n",
-        "    # 5. 평탄화 (Flatten)\n",
-        "    # (33, 4) -> (132,)\n",
-        "    # 이제 이 벡터는 \"카메라 위치\"나 \"거리\"와 무관한 순수한 자세 정보입니다.\n",
-        "    return lm_copy.flatten()\n",
-        "\n",
-        "MODEL_PATHS = {\n",
-        "    'rf': 'landmark_pose_classifier_rf.pkl',\n",
-        "    'svm': 'landmark_pose_classifier_svm.pkl',\n",
-        "    'keras': 'landmark_pose_classifier_keras.h5'\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xv79WLSyuKIX"
-      },
-      "source": [
-        "### Landmark + Plane + Angle"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "CjVBkjGfuOQ5"
-      },
-      "outputs": [],
-      "source": [
+        "    except: return None, reliability\n",
         "\n",
         "def feature_engineering(landmarks):\n",
         "    \"\"\"\n",
@@ -481,7 +215,6 @@
         "    lm_copy[:, :3] /= scale_factor\n",
         "\n",
         "    # 1차원으로 펴기 (Visibility 포함 132차원)\n",
-        "    # 여기서는 정보 손실 방지를 위해 다 넣겠습니다.\n",
         "    raw_features = lm_copy.flatten()\n",
         "\n",
         "    # ==========================================\n",
@@ -508,7 +241,7 @@
         "\n",
         "    for p1, p2, p3 in angles_to_calc:\n",
         "        ang, rel = calculate_angle(p1, p2, p3)\n",
-        "        # [중요] 각도 정규화: 0~180 -> 0.0~1.0\n",
+        "        # 각도 정규화: 0~180 -> 0.0~1.0\n",
         "        if ang is not None:\n",
         "            angle_feats.append(ang / 180.0)\n",
         "        else:\n",
@@ -544,47 +277,8 @@
         "    'rf': 'All_pose_classifier_rf.pkl',\n",
         "    'svm': 'All_pose_classifier_svm.pkl',\n",
         "    'keras': 'All_pose_classifier_keras.h5'\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "C9um-Rfkbx-D"
-      },
-      "source": [
-        "## 1-2. 모델 로드"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 53,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P6H9X1zfV0aN",
-        "outputId": "e0d5ff14-fc84-49b4-bce1-c695dd6e1ea0"
-      },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[KERAS] Keras 모델 로드 완료!\n",
-            "\n",
-            "현재 설정된 모델: keras\n"
-          ]
-        }
-      ],
-      "source": [
+        "}\n",
+        "\n",
         "def load_pose_model(model_type, paths):\n",
         "    path = paths.get(model_type)\n",
         "\n",
@@ -647,73 +341,8 @@
         "pose = mp_pose.Pose(min_detection_confidence=0.5, min_tracking_confidence=0.5)\n",
         "mp_drawing = mp.solutions.drawing_utils\n",
         "\n",
-        "print(f\"\\n현재 설정된 모델: {CURRENT_MODEL_TYPE}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 1-3. 모델 평가(X_test.npy, Y_test.npy 필요)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from sklearn.metrics import accuracy_score, classification_report\n",
-        "from sklearn.metrics import log_loss\n",
-        "X_TEST_PATH = 'X_test.npy'\n",
-        "Y_TEST_PATH = 'Y_test.npy'\n",
-        "raw_test = np.load(X_TEST_PATH)\n",
-        "labels_test = np.load(Y_TEST_PATH)\n",
-        "def process_data(raw_x, raw_y):\n",
-        "  processed_x, processed_y = [], []\n",
-        "  for i, lm in enumerate(raw_x):\n",
-        "      fv = feature_engineering(lm)\n",
-        "      if fv is not None:\n",
-        "          processed_x.append(fv)\n",
-        "          processed_y.append(raw_y[i])\n",
-        "  return np.array(processed_x), np.array(processed_y)\n",
-        "X_test, y_test = process_data(raw_test, labels_test)\n",
-        "if CURRENT_MODEL_TYPE in ['rf', 'svm']:\n",
-        "    y_pred = model.predict(X_test)\n",
-        "    y_prob = model.predict_proba(X_test)[:, 1]\n",
-        "    loss = log_loss(y_test, y_prob)\n",
-        "    accuracy = accuracy_score(y_test, y_pred)\n",
+        "print(f\"\\n현재 설정된 모델: {CURRENT_MODEL_TYPE}\")\n",
         "\n",
-        "    print(f\"Test Loss (Log Loss): {loss:.4f}\")\n",
-        "    print(f\"Test Accuracy: {accuracy:.4f}\")\n",
-        "    print(\"\\n분류 보고서:\")\n",
-        "    print(classification_report(y_test, y_pred))\n",
-        "elif CURRENT_MODEL_TYPE == 'keras':\n",
-        "    # Deep Learning 계열 (Keras 사용)\n",
-        "    loss, accuracy = model.evaluate(X_test, y_test)\n",
-        "\n",
-        "    print(f\"\\n테스트 데이터 평가 결과:\")\n",
-        "    print(f\"Loss (손실): {loss:.4f}\")\n",
-        "    print(f\"Accuracy (정확도): {accuracy:.4f}\")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "H_tJKxjaBZz5"
-      },
-      "source": [
-        "# 2. 웹캠 통신 함수"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {
-        "id": "C550Qk1sA7Qq"
-      },
-      "outputs": [],
-      "source": [
         "def js_to_image(js_reply):\n",
         "  \"\"\"JS 객체를 OpenCV 이미지로 변환\"\"\"\n",
         "  image_bytes = b64decode(js_reply.split(',')[1])\n",
@@ -866,7 +495,7 @@
         "id": "ccKVoOy-BhT0"
       },
       "source": [
-        "# 3. 메인 실행"
+        "# 2. 메인 실행"
       ]
     },
     {
