--- a/model_codes/Allfeature.ipynb
+++ b/model_codes/Allfeature.ipynb
@@ -458,7 +458,7 @@
         "id": "nA508CHTtoeq"
       },
       "source": [
-        "## MLP(val_accuracy = 0.9613)"
+        "## MLP "
       ]
     },
     {
@@ -752,7 +752,7 @@
         "id": "9Dkuzqwvtoev"
       },
       "source": [
-        "## RandomForest (val_accuracy = 0.8688)"
+        "## RandomForest  "
       ]
     },
     {
@@ -840,7 +840,7 @@
         "id": "itZJbt5_toe1"
       },
       "source": [
-        "## Support Vector Machine (val_accuracy = 0.9210)"
+        "## Support Vector Machine  "
       ]
     },
     {
@@ -948,7 +948,7 @@
         "id": "q3jBv-xCtoe2"
       },
       "source": [
-        "## Log_Regression(val_accuracy = 0.5708)"
+        "## Log_Regression "
       ]
     },
     {
