--- a/model_codes/landmarkfeature.ipynb
+++ b/model_codes/landmarkfeature.ipynb
@@ -413,7 +413,7 @@
         "id": "nA508CHTtoeq"
       },
       "source": [
-        "## MLP(val_accuracy = 0.9613)"
+        "## MLP"
       ]
     },
     {
@@ -707,7 +707,7 @@
         "id": "9Dkuzqwvtoev"
       },
       "source": [
-        "## RandomForest (val_accuracy = 0.8688)"
+        "## RandomForest"
       ]
     },
     {
@@ -795,7 +795,7 @@
         "id": "itZJbt5_toe1"
       },
       "source": [
-        "## Support Vector Machine (val_accuracy = 0.9210)"
+        "## Support Vector Machine "
       ]
     },
     {
@@ -903,7 +903,7 @@
         "id": "q3jBv-xCtoe2"
       },
       "source": [
-        "## Log_Regression(val_accuracy = 0.5708)"
+        "## Log_Regression"
       ]
     },
     {
