--- a/model_codes/onlyplane.ipynb
+++ b/model_codes/onlyplane.ipynb
@@ -393,7 +393,7 @@
         "id": "nA508CHTtoeq"
       },
       "source": [
-        "## MLP(val_accuracy = 0.9613)"
+        "## MLP "
       ]
     },
     {
@@ -687,7 +687,7 @@
         "id": "9Dkuzqwvtoev"
       },
       "source": [
-        "## RandomForest (val_accuracy = 0.8688)"
+        "## RandomForest  "
       ]
     },
     {
@@ -775,7 +775,7 @@
         "id": "itZJbt5_toe1"
       },
       "source": [
-        "## Support Vector Machine (val_accuracy = 0.9210)"
+        "## Support Vector Machine  "
       ]
     },
     {
@@ -883,7 +883,7 @@
         "id": "q3jBv-xCtoe2"
       },
       "source": [
-        "## Log_Regression(val_accuracy = 0.5708)"
+        "## Log_Regression "
       ]
     },
     {
