--- a/model_codes/angle+plane.ipynb
+++ b/model_codes/angle+plane.ipynb
@@ -483,7 +483,7 @@
         "id": "nA508CHTtoeq"
       },
       "source": [
-        "## MLP(val_accuracy = 0.9613)"
+        "## MLP "
       ]
     },
     {
@@ -777,7 +777,7 @@
         "id": "9Dkuzqwvtoev"
       },
       "source": [
-        "## RandomForest (val_accuracy = 0.8688)"
+        "## RandomForest "
       ]
     },
     {
@@ -865,7 +865,7 @@
         "id": "itZJbt5_toe1"
       },
       "source": [
-        "## Support Vector Machine (val_accuracy = 0.9210)"
+        "## Support Vector Machine "
       ]
     },
     {
@@ -973,7 +973,7 @@
         "id": "q3jBv-xCtoe2"
       },
       "source": [
-        "## Log_Regression(val_accuracy = 0.5708)"
+        "## Log_Regression "
       ]
     },
     {
